--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,12 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
     
     - name: Cache dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -37,7 +37,12 @@ jobs:
       env:
         API_KEY: test-key-for-ci
         PERFORMANCE_THRESHOLD: 0.8
+        MLFLOW_TRACKING_URI: file:///tmp/mlflow
     
     - name: Test app startup
       run: |
-        python -c "import app; print('App imports successfully')" 
+        python -c "import app; print('App imports successfully')"
+      env:
+        API_KEY: test-key-for-ci
+        PERFORMANCE_THRESHOLD: 0.8
+        MLFLOW_TRACKING_URI: file:///tmp/mlflow 
