--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        echo "Installing core dependencies..."
+        pip install --verbose --timeout 300 fastapi==0.115.0 uvicorn==0.32.0 requests==2.32.0 python-dotenv==1.0.0 pydantic==2.5.2 pytest==7.4.3
+        echo "Installing ML dependencies..."  
+        pip install --verbose --timeout 300 scikit-learn==1.3.2 pandas==2.1.4 numpy==1.24.4 sqlalchemy==2.0.23
+        echo "Installing other dependencies..."
+        pip install --verbose --timeout 300 loguru==0.7.2
+        echo "Installing heavy dependencies (may take longer)..."
+        pip install --verbose --timeout 600 mlflow==2.8.1 prefect>=3.1 streamlit==1.28.1
+      timeout-minutes: 20
     
     - name: Run tests
       run: |
